update color in media screen

--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,7 @@ figure figcaption {
 		-o-transform: translateX(-300px);
 		transform: translateX(-300px);
 		padding-top: 4em;
-		background-color: #f9bf3f;
+		background-color: #014122;
 		height: -webkit-fill-available;
 		left: 0px;
 	}
