--- a/css/style.css
+++ b/css/style.css
@@ -506,7 +506,7 @@ body.offcanvas #colorlib-aside {
 	-o-transform: translateX(0);
 	transform: translateX(0);
 	width: 372px;
-	background-color: #f9bf3f;
+	background-color: #008000;
 	z-index: 999;
 	position: fixed;
 }
