update color in media screen

--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body {
 	font-weight: 400;
 	font-size: 15px;
 	line-height: 1.8 !important;
-	color: black;
+    color: white;
 }
 @media screen and (max-width: 992px) {
 	body {
