--- a/css/style.css
+++ b/css/style.css
@@ -711,12 +711,12 @@ body.offcanvas .colorlib-nav-toggle {
 .project-info h3 {
 	font-size: 1.5em;
 	font-weight: 300;
-	color: #374054;
+	color: #ffffff;
 	margin: 0 0 15px 0;
 }
 
 .project-info p {
-	color: #74808a;
+	color: #ffffff;
 	margin: 0 0 15px 0;
 	font-size: 0.9em;
 }
@@ -741,8 +741,8 @@ body.offcanvas .colorlib-nav-toggle {
 	letter-spacing: 1px;
 	text-transform: uppercase;
 	font-family: "Quicksand", Arial, sans-serif;
-	background-color: #2c98f0;
-	color: #fff;
+	background-color: #ffffff;
+	color: #ffffff;
 	position: relative;
 	-webkit-box-shadow: none !important;
 	-moz-box-shadow: none !important;
