--- a/css/style.css
+++ b/css/style.css
@@ -221,7 +221,7 @@ figure figcaption {
 	letter-spacing: 0.5px;
 }
 #colorlib-aside #colorlib-main-menu ul li a {
-	color: rgba(0, 0, 0, 0.7);
+	color: #ffffff;
 	text-decoration: none;
 	position: relative;
 	padding: 10px 0;
