--- a/css/style.css
+++ b/css/style.css
@@ -191,7 +191,7 @@ figure figcaption {
 #colorlib-aside #colorlib-logo a {
 	display: block;
 	text-align: center;
-	color: #000;
+	color: #ffffff;
 	padding-right: 0.3em;
 }
 #colorlib-aside #colorlib-main-menu {
