change timeline circle color

--- a/css/style.css
+++ b/css/style.css
@@ -841,7 +841,7 @@ body.offcanvas .colorlib-nav-toggle {
 	display: block;
 	width: 40px;
 	height: 40px;
-	background: #2c98f0;
+	background: #7f52ff;
 	-webkit-border-radius: 50%;
 	-moz-border-radius: 50%;
 	-ms-border-radius: 50%;
@@ -857,7 +857,7 @@ body.offcanvas .colorlib-nav-toggle {
 	.timeline-entry
 	.timeline-entry-inner
 	.timeline-icon.color-2 {
-	background: brown;
+	background: #f2f3f7;
 	color: white;
 }
 .timeline-centered
