change timeline circle color

--- a/css/style.css
+++ b/css/style.css
@@ -857,8 +857,8 @@ body.offcanvas .colorlib-nav-toggle {
 	.timeline-entry
 	.timeline-entry-inner
 	.timeline-icon.color-2 {
-	background: #f2f3f7;
-	color: white;
+	background: #7f52ff;
+	color: #7f52ff;
 }
 .timeline-centered
 	.timeline-entry
