adding two buttons color

--- a/css/style.css
+++ b/css/style.css
@@ -1356,7 +1356,7 @@ body.offcanvas .colorlib-nav-toggle {
 }
 
 .custom-button {
-  background-color: #6b3bca; /* Purple color */
+  background-color: #7f52ff; /* Purple color */
   color: white;
   border: none;
   border-radius: 8px; /* Rounded corners */
