--- a/css/style.css
+++ b/css/style.css
@@ -293,7 +293,7 @@ figure figcaption {
 }
 #colorlib-aside .colorlib-footer ul {
 	padding: 0 20px;
-	margin: 0 0 10px 0;
+	margin: 0 0 10px 20px;
 }
 #colorlib-aside .colorlib-footer ul li {
 	padding: 0 20px;
