--- a/css/style.css
+++ b/css/style.css
@@ -2066,7 +2066,7 @@ span {
   footer {
 	font-size: 13px;
 	background: var(--footer-bg);
-	padding: 2em 4em 0px 110px;
+	padding: 2em 4em;
 	/* display: flex; */
 	align-items: start;
 	justify-content: center;
@@ -2081,7 +2081,7 @@ span {
   
   .col {
 	flex: 1;
-	margin: 0 20px;
+	margin: 0 210px;
 	display: inline-grid;
   }
   
