adding social media icons

--- a/css/style.css
+++ b/css/style.css
@@ -505,7 +505,7 @@ figure figcaption {
 .icon {
   width: 60px;
   height: 60px;
-/*  border-radius: 50%;*/
+  border-radius: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
