--- a/css/style.css
+++ b/css/style.css
@@ -505,7 +505,7 @@ figure figcaption {
 .icon {
   width: 40px;
   height: 40px;
-  border-radius: 50%;
+  border-radius: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
