--- a/css/style.css
+++ b/css/style.css
@@ -520,7 +520,7 @@ figure figcaption {
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
 }
 
-.gitlab { background-image: url('https://cdn-icons-png.flaticon.com/512/5968/5968866.png'); background-size: cover; transform: scale(1.3); }
+.github { background-image: url('https://cdn-icons-png.flaticon.com/512/5968/5968866.png'); background-size: cover; transform: scale(1.3); }
 
 .linkedin { background-color: #0077b5; background-image: url('https://cdn-icons-png.flaticon.com/512/145/145807.png'); background-size: cover; }
 
