--- a/css/style.css
+++ b/css/style.css
@@ -522,15 +522,30 @@ figure figcaption {
 
 .github { background-image: url('https://cdn-icons-png.flaticon.com/512/5968/5968866.png'); background-size: cover; transform: scale(1.3); }
 
-.linkedin { background-color: #0077b5; background-image: url('https://cdn-icons-png.flaticon.com/512/145/145807.png'); background-size: cover; }
+.linkedin { background-color: #0077b5; background-image: url('https://cdn-icons-png.flaticon.com/512/145/145807.png'); background-size: cover;
+    width: 30px;
+    height: 30px;
+}
 
-.email { background-color: #ea4335; background-image: url('https://cdn-icons-png.flaticon.com/512/732/732200.png'); background-size: contain; }
+.email { background-color: #ea4335; background-image: url('https://cdn-icons-png.flaticon.com/512/732/732200.png'); background-size: contain;
+    width: 30px;
+    height: 30px;
+}
 
-.facebook { background-color: #3b5998; background-image: url('https://cdn-icons-png.flaticon.com/512/733/733547.png'); background-size: cover; }
+.facebook { background-color: #3b5998; background-image: url('https://cdn-icons-png.flaticon.com/512/733/733547.png'); background-size: cover;
+    width: 30px;
+    height: 30px;
+}
 
-.medium { background-color: #000; background-image: url('https://cdn-icons-png.flaticon.com/512/5968/5968906.png'); background-size: cover; }
+.medium { background-color: #000; background-image: url('https://cdn-icons-png.flaticon.com/512/5968/5968906.png'); background-size: cover;
+    width: 30px;
+    height: 30px;
+}
 
-.stackoverflow { background-color: #f48024; background-image: url('https://cdn-icons-png.flaticon.com/512/2111/2111628.png'); background-size: cover; }
+.stackoverflow { background-color: #f48024; background-image: url('https://cdn-icons-png.flaticon.com/512/2111/2111628.png'); background-size: cover;
+    width: 30px;
+    height: 30px;
+}
 
 
 body.offcanvas {
