working on footer content

--- a/css/style.css
+++ b/css/style.css
@@ -1030,10 +1030,10 @@ body.offcanvas .colorlib-nav-toggle {
 	font-weight: 500;
 }
 .services.color-2 {
-	border-bottom: 2px solid #ec5453;
+	border-bottom: 2px solid #41dc85;
 }
 .services.color-2 .icon2 i {
-	color: #ec5453;
+	color: #41dc85;
 }
 .services.color-3 {
 	border-bottom: 2px solid #7f52ff;
@@ -1121,13 +1121,13 @@ body.offcanvas .colorlib-nav-toggle {
 	text-transform: uppercase;
 }
 .services.color-2 .icon {
-	background: #ec5453;
+	background: #41dc85;
 }
 .services.color-2 .icon:before {
-	border-color: transparent transparent #ec5453 transparent;
+	border-color: transparent transparent #41dc85 transparent;
 }
 .services.color-2 .icon:after {
-	border-color: #ec5453 transparent transparent transparent;
+	border-color: #41dc85 transparent transparent transparent;
 }
 .services.color-3 .icon {
 	background: #7f52ff;
