working on footer content

--- a/css/style.css
+++ b/css/style.css
@@ -2195,7 +2195,7 @@ span {
     vertical-align: middle;
     white-space: nowrap;
     text-align: center;
-    background-color: #41dc85 !important;
+    background-color: #7f52ff !important;
     border-radius: 10px;
 }
 
